Relocate sources and build georchestra dependencies
- fall back to Java 11. Georchestra modules won't build
with Java 17. Revisit and possibly fix upstream.