@@ -24,6 +24,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 import org.georchestra.gateway.model.GeorchestraUsers;
 import org.georchestra.gateway.security.GeorchestraUserMapperExtension;
@@ -79,7 +80,7 @@ public class OAuth2AuthenticationTokenUserMapper implements GeorchestraUserMappe
                 return false;
             }
             return true;
-        }).toList();
+        }).collect(Collectors.toList());
         return roles;
     }
 
